--- a/src/Wallabag/CoreBundle/Resources/translations/messages.it.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.it.yml
@@ -514,6 +514,7 @@ user:
         repeat_new_password_label: 'Ripeti password'
         plain_password_label: '????'
         email_label: 'E-mail'
+        # group: 'Group'
         # enabled_label: 'Enabled'
         # last_login_label: 'Last login'
         # twofactor_label: Two factor authentication
