--- a/src/Wallabag/CoreBundle/Resources/translations/messages.pl.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.pl.yml
@@ -514,6 +514,7 @@ user:
         repeat_new_password_label: 'Powtórz nowe hasło'
         plain_password_label: 'Jawne hasło'
         email_label: 'Adres email'
+        # group: 'Group'
         enabled_label: 'Włączony'
         last_login_label: 'Ostatnie logowanie'
         twofactor_label: Autoryzacja dwuetapowa
