--- a/src/Wallabag/CoreBundle/Resources/translations/messages.es.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.es.yml
@@ -33,6 +33,8 @@ menu:
         back_to_unread: 'Volver a los artículos sin leer'
         users_management: 'Configuración de usuarios'
         # site_credentials: 'Site credentials'
+        # users_management: 'Users management'
+        # groups_management: 'Groups management'
     top:
         add_new_entry: 'Añadir un nuevo artículo'
         search: 'Buscar'
@@ -496,6 +498,25 @@ developer:
             paragraph_8: 'Si quiere ver todos los métodos del API, puede verlos en <a href="%link%">nuestra documentación del API</a>.'
         back: 'Volver'
 
+group:
+    # page_title: Groups management
+    # new_group: Create a new group
+    # edit_group: Edit an existing group
+    # description: "Here you can manage all groups (create, edit and delete)"
+    # list:
+    #     actions: Actions
+    #     edit_action: Edit
+    #     yes: Yes
+    #     no: No
+    #     create_new_one: Create a new group
+    # form:
+    #     name_label: 'Name'
+    #     roles_label: 'Roles'
+    #     save: Save
+    #     delete: Delete
+    #     delete_confirm: Are you sure?
+    #     back_to_list: Back to list
+
 user:
     page_title: Gestión de usuarios
     new_user: Crear un usuario
@@ -601,3 +622,8 @@ flashes:
             # added: 'Site credential for "%host%" added'
             # updated: 'Site credential for "%host%" updated'
             # deleted: 'Site credential for "%host%" deleted'
+    group:
+        notice:
+            # added: 'Group "%name%" added'
+            # updated: 'Group "%name%" updated'
+            # deleted: 'Group "%name%" deleted'
