--- a/src/Wallabag/CoreBundle/Resources/translations/messages.pl.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.pl.yml
@@ -33,6 +33,7 @@ menu:
         back_to_unread: 'Powrót do nieprzeczytanych artykułów'
         users_management: 'Zarządzanie użytkownikami'
         # site_credentials: 'Site credentials'
+        # groups_management: 'Groups management'
     top:
         add_new_entry: 'Dodaj nowy wpis'
         search: 'Szukaj'
@@ -496,6 +497,25 @@ developer:
             paragraph_8: 'Jeżeli chcesz wyświetlić wszystkie punkty końcowe API, zobacz <a href="%link%">Dokumentacja naszego API</a>.'
         back: 'Cofnij'
 
+group:
+    # page_title: Groups management
+    # new_group: Create a new group
+    # edit_group: Edit an existing group
+    # description: "Here you can manage all groups (create, edit and delete)"
+    # list:
+    #     actions: Actions
+    #     edit_action: Edit
+    #     yes: Yes
+    #     no: No
+    #     create_new_one: Create a new group
+    # form:
+    #     name_label: 'Name'
+    #     roles_label: 'Roles'
+    #     save: Save
+    #     delete: Delete
+    #     delete_confirm: Are you sure?
+    #     back_to_list: Back to list
+
 user:
     page_title: Zarządzanie użytkownikami
     new_user: Stwórz nowego użytkownika
@@ -602,3 +622,8 @@ flashes:
             # added: 'Site credential for "%host%" added'
             # updated: 'Site credential for "%host%" updated'
             # deleted: 'Site credential for "%host%" deleted'
+    group:
+        notice:
+            # added: 'Group "%name%" added'
+            # updated: 'Group "%name%" updated'
+            # deleted: 'Group "%name%" deleted'
