--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
@@ -42,6 +42,7 @@ menu:
         random_entry: Aller à un article aléatoire de cette liste
         export: "Exporter"
         account: "Mon compte"
+        sort_entries: 'Trier les articles'
     search_form:
         input_label: "Saisissez votre terme de recherche"
 
@@ -234,7 +235,7 @@ entry:
         export_title: "Exporter"
     filters:
         title: "Filtres"
-        status_label: "Status"
+        status_label: "Statut"
         archived_label: "Lus"
         starred_label: "Favoris"
         unread_label: "Non lus"
@@ -256,6 +257,15 @@ entry:
         action:
             clear: "Effacer"
             filter: "Filtrer"
+    sort:
+        title: 'Options de tri'
+        status_label: 'Trier par'
+        by:
+            creation_date: 'Date de création'
+            title: 'Titre'
+            last_updated: 'Dernière mise à jour'
+        ascending: 'Ascendant'
+        descending: 'Descendant'
     view:
         left_menu:
             back_to_top: "Revenir en haut"
