--- a/src/Wallabag/CoreBundle/Resources/translations/messages.oc.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.oc.yml
@@ -42,6 +42,7 @@ menu:
         random_entry: "Sautar a un article a l'azard"
         export: 'Exportar'
         # account: 'My account'
+        # sort_entries: 'Sort entries'
     search_form:
         input_label: 'Picatz vòstre mot-clau a cercar aquí'
 
@@ -256,6 +257,15 @@ entry:
         action:
             clear: 'Escafar'
             filter: 'Filtrar'
+    sort:
+        # title: 'Sort options'
+        # status_label: 'Sort by'
+        # by:
+        #    creation_date: 'Creation date'
+        #    title: 'Title'
+        #    last_updated: 'Last updated'
+        #ascending: 'Asencending'
+        # descending: 'Descending'
     view:
         left_menu:
             back_to_top: 'Tornar en naut'
