--- a/src/Wallabag/CoreBundle/Resources/translations/messages.pt.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.pt.yml
@@ -42,6 +42,7 @@ menu:
         random_entry: Ir para um artigo aleatório desta lista
         export: 'Exportar'
         # account: 'My account'
+        # sort_entries: 'Sort entries'
     search_form:
         input_label: 'Digite aqui sua pesquisa'
 
@@ -256,6 +257,15 @@ entry:
         action:
             clear: 'Limpar'
             filter: 'Filtro'
+    sort:
+        # title: 'Sort options'
+        # status_label: 'Sort by'
+        # by:
+        #    creation_date: 'Creation date'
+        #    title: 'Title'
+        #    last_updated: 'Last updated'
+        #ascending: 'Asencending'
+        # descending: 'Descending'
     view:
         left_menu:
             back_to_top: 'Voltar ao topo'
