Add filter to users management page
Signed-off-by: Thomas Citharel <tcit@tcit.fr>

--- a/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
@@ -512,6 +512,9 @@ user:
         delete: Delete
         delete_confirm: Are you sure?
         back_to_list: Back to list
+    search:
+        label: Filter
+        placeholder: Filter by username or email
 
 error:
     page_title: An error occurred
