--- a/src/Wallabag/CoreBundle/Resources/translations/messages.es.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.es.yml
@@ -512,6 +512,9 @@ user:
         delete: Eliminar
         delete_confirm: ¿Estás seguro?
         back_to_list: Volver a la lista
+    search:
+        # label: Filter
+        # placeholder: Filter by username or email
 
 error:
     page_title: Ha ocurrido un error
