--- a/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
@@ -512,6 +512,9 @@ user:
         delete: Löschen
         delete_confirm: Bist du sicher?
         back_to_list: Zurück zur Liste
+    search:
+        # label: Filter
+        # placeholder: Filter by username or email
 
 error:
     page_title: Ein Fehler ist aufgetreten
