--- a/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
@@ -443,55 +443,55 @@ import:
         description: 'Dieser Import wird all deine Pinboard Artikel importieren. Auf der Seite Backup (https://pinboard.in/settings/backup) klickst du auf "JSON" in dem Abschnitt "Lesezeichen". Eine JSON Datei wird dann heruntergeladen (z.B. "pinboard_export").'
         how_to: 'Bitte wähle deinen Pinboard Export aus und klicke den nachfolgenden Button zum Importieren.'
 
-developer:
+apps:
     page_title: 'API-Client-Verwaltung'
-    welcome_message: 'Willkomen zur wallabag API'
-    documentation: 'Dokumentation'
-    how_to_first_app: 'Wie erstelle ich meine erste Anwendung'
-    full_documentation: 'Komplette API-Dokumentation einsehen'
-    list_methods: 'Liste der API-Methoden'
-    clients:
-        title: 'Clients'
+    # allow:
+    #    title: 'A new application would like to connect to your account'
+    #    permissions:
+    #        read:
+    #            label: 'Read your data'
+    #            desc: '%name% will be able to access the list and contents of your entries, tags and annotations.'
+    #        write:
+    #            label: 'Edit your data'
+    #            desc: '%name% will be able to edit and manage (including deleting) your entries, tags and annotations.'
+    #        user:
+    #            label: 'Edit your user settings'
+    #            desc: '%name% will be able to manage your user account.'
+    featured:
+        # title: 'Featured apps'
+    list:
+        # title: 'Authorized apps'
+    old_clients:
         create_new: 'Neuen Client erstellen'
-    existing_clients:
         title: 'Bestehende Clients'
+        list: 'Clients'
         field_id: 'Client-ID'
         field_secret: 'Client-Secret'
-        field_uris: 'Weiterleitungs-URIs'
-        field_grant_types: "Erlaubte grant_types"
         no_client: 'Bisher kein Client.'
     remove:
         warn_message_1: 'Du hast die Möglichkeit, diesen Client zu entfernen. DIESE AKTION IST NICHT WIDERRUFBAR!'
         warn_message_2: "Wenn du ihn entfernst, hat keine der damit konfigurierten Anwendungen mehr die Möglichkeit, sich in deinen wallabag-Konto anzumelden."
         action: 'Client entfernen'
-    client:
+    old_client:
         page_title: 'API-Client-Verwaltung > Neuer Client'
         page_description: 'Du bist dabei, einen neuen Client zu erstellen. Fülle das nachfolgende Feld für die Weiterleitungs-URIs deiner Anwendung aus.'
         form:
             name_label: 'Name des Clients'
-            redirect_uris_label: 'Weiterleitungs-URIs'
             save_label: 'Neuen Client erstellen'
         action_back: 'Zurück'
-    client_parameter:
-        page_title: 'API-Client-Verwaltung > Client-Parameter'
-        page_description: 'Dies sind deine Client-Parameter.'
-        field_name: 'Client Name'
-        field_id: 'Client-ID'
-        field_secret: 'Client-Secret'
-        back: 'Zurück'
-        read_howto: 'Lese des How-To zu "Wie erstelle ich meine erste Anwendung"'
-    howto:
-        page_title: 'API-Client-Verwaltung > Wie erstelle ich meine erste Anwendung'
-        description:
-            paragraph_1: 'Die folgenden Befehle machen Gebrauch von der <a href="https://github.com/jkbrzt/httpie">HTTPie-Bibliothek</a>. Stelle sicher, dass sie auf deinem System installiert ist, bevor du fortfährst.'
-            paragraph_2: 'Du benötigst einen Token, damit deine Anwendung mit der wallabag-API kommunizieren kann.'
-            paragraph_3: 'Um diesen Token zu erstellen, muss <a href="%link%">ein neuer Client erstellt werden</a>.'
-            paragraph_4: 'Nun erstelle deinen Token (ersetze client_id, client_secret, username und password mit deinen Werten):'
-            paragraph_5: 'Die API wird eine Antwort der folgenden Art zurückgeben:'
-            paragraph_6: 'Der access_token ist nützlich, um die API aufzurufen. Beispiel:'
-            paragraph_7: 'Dieser Aufruf wird alle Einträge für den Nutzer zurückgeben.'
-            paragraph_8: 'Wenn du alle API-Endpunkte sehen willst, werfe einen Blick auf die <a href="%link%">API-Dokumentation</a>.'
-        back: 'Zurück'
+        parameters:
+            page_title: 'API-Client-Verwaltung > Client-Parameter'
+            page_description: 'Dies sind deine Client-Parameter.'
+            field_name: 'Client Name'
+            field_id: 'Client-ID'
+            field_secret: 'Client-Secret'
+            back: 'Zurück'
+    app:
+        # created_at: 'Created at: %date%'
+    documentation:
+        title: 'Dokumentation'
+        full_documentation: 'Komplette API-Dokumentation einsehen'
+        list_methods: 'Liste der API-Methoden'
 
 user:
     page_title: Benutzerverwaltung
