--- a/src/Wallabag/CoreBundle/Resources/translations/messages.es.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.es.yml
@@ -443,55 +443,55 @@ import:
         description: 'Importa todos tus artículos de Pinboard. En la página de backup (https://pinboard.in/settings/backup), haz clic en "JSON" en la sección "Marcadores". Obtendrás un archivo JSON llamado "pinboard_export".'
         how_to: 'Seleccione el archivo exportado de Pinboard y haga clic en el botón para subirlo e importarlo.'
 
-developer:
+apps:
     page_title: 'Gestión de clientes API'
-    welcome_message: 'Bienvenido al API de wallabag'
-    documentation: 'Documentación'
-    how_to_first_app: 'Cómo crear mi primera aplicación'
-    full_documentation: 'Ver documentación completa del API'
-    list_methods: 'Lista con los métodos del API'
-    clients:
-        title: 'Clientes'
+    # allow:
+    #    title: 'A new application would like to connect to your account'
+    #    permissions:
+    #        read:
+    #            label: 'Read your data'
+    #            desc: '%name% will be able to access the list and contents of your entries, tags and annotations.'
+    #        write:
+    #            label: 'Edit your data'
+    #            desc: '%name% will be able to edit and manage (including deleting) your entries, tags and annotations.'
+    #        user:
+    #            label: 'Edit your user settings'
+    #            desc: '%name% will be able to manage your user account.'
+    featured:
+        # title: 'Featured apps'
+    list:
+        # title: 'Authorized apps'
+    old_clients:
         create_new: 'Crear un nuevo cliente'
-    existing_clients:
         title: 'Clientes existentes'
+        list: 'Clientes'
         field_id: 'Identificador del cliente'
         field_secret: 'Secreto del cliente'
-        field_uris: 'URIs de redirección'
-        field_grant_types: 'Permisos concedidos'
         no_client: 'Todavía no hay clientes.'
     remove:
         warn_message_1: 'Tienes permiso para eliminar el cliente %name%. ¡Está acción es IRREVERSIBLE!'
         warn_message_2: "Si lo eliminas, cada aplicación configurada con ese cliente no podrá autenticarse en wallabag."
         action: 'Eliminar el cliente %name%'
-    client:
+    old_client:
         page_title: 'Gestión de clientes API > Nuevo cliente'
         page_description: 'Está a punto de crear un nuevo cliente. Por favor, rellene el campo de abajo con la URI de redirección de su aplicación.'
         form:
             name_label: 'Nombre del cliente'
-            redirect_uris_label: 'URIs de redirección'
             save_label: 'Crear un nuevo cliente'
         action_back: 'Volver'
-    client_parameter:
-        page_title: 'Gestión de clientes API > Parámetros del cliente'
-        page_description: 'Aquí están los parámetros del cliente.'
-        field_name: 'Nombre del cliente'
-        field_id: 'Identificador del cliente'
-        field_secret: 'Secreto del cliente'
-        back: 'Volver'
-        read_howto: 'Lea la guía "Crear mi primera aplicación"'
-    howto:
-        page_title: 'Gestión de clientes API > Cómo crear mi primera aplicación'
-        description:
-            paragraph_1: 'Los siguientes comandos hacen uso de la <a href="https://github.com/jkbrzt/httpie">biblioteca HTTPie</a>. Compruebe que está instalada en su sistema antes de usarla.'
-            paragraph_2: 'Necesitas un token para establecer la comunicación entre una aplicación de terceros y la API de wallabag.'
-            paragraph_3: 'Para crear este token, necesitas <a href="%link%">crear un nuevo cliente</a>.'
-            paragraph_4: 'Ahora crea tu token (reemplace client_id, client_secret, username y password con los valores generados):'
-            paragraph_5: 'Este API devolverá una respuesta como esta:'
-            paragraph_6: 'El access_token es útil para llamar a los métodos del API. Por ejemplo:'
-            paragraph_7: 'Esta llamada devolverá todos los artículos de tu usuario.'
-            paragraph_8: 'Si quiere ver todos los métodos del API, puede verlos en <a href="%link%">nuestra documentación del API</a>.'
-        back: 'Volver'
+        parameters:
+            page_title: 'Gestión de clientes API > Parámetros del cliente'
+            page_description: 'Aquí están los parámetros del cliente.'
+            field_name: 'Nombre del cliente'
+            field_id: 'Identificador del cliente'
+            field_secret: 'Secreto del cliente'
+            back: 'Volver'
+    app:
+        # created_at: 'Created at: %date%'
+    documentation:
+        title: 'Documentación'
+        full_documentation: 'Ver documentación completa del API'
+        list_methods: 'Lista con los métodos del API'
 
 user:
     page_title: Gestión de usuarios
