--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
@@ -443,55 +443,55 @@ import:
         description: "Sur la page « Backup » (https://pinboard.in/settings/backup), cliquez sur « JSON » dans la section « Bookmarks ». Un fichier json (sans extension) sera téléchargé (« pinboard_export »)."
         how_to: "Choisissez le fichier de votre export Pinboard et cliquez sur le bouton ci-dessous pour l’importer."
 
-developer:
+apps:
     page_title: "Gestion des clients API"
-    welcome_message: "Bienvenue sur l’API de wallabag"
-    documentation: "Documentation"
-    how_to_first_app: "Comment créer votre première application"
-    full_documentation: "Voir la documentation complète de l’API"
-    list_methods: "Lister toutes les méthodes de l’API"
-    clients:
-        title: "Clients"
+    allow:
+        title: 'Une nouvelle application voudrait accéder à votre compte'
+        permissions:
+            read:
+                label: 'Lire vos données'
+                desc: '%name% pourra accéder à la liste et au contenu de vos articles, tags et annotations.'
+            write:
+                label: 'Modifier vos données'
+                desc: '%name% pourra modifier et gérer (y compris supprimer) vos articles, tags et annotations.'
+            user:
+                label: 'Modifier votre compte utilisateur'
+                desc: '%name% pourra modifier les détails de votre compte utilisateur.'
+    featured:
+        title: 'Applications mises en avant'
+    list:
+        title: 'Applications autorisées'
+    old_clients:
         create_new: "Créer un nouveau client"
-    existing_clients:
-        title: "Les clients existants"
+        title: "Clients existants (déprécié)"
+        list: "Liste des clients"
         field_id: "ID Client"
         field_secret: "Clé secrète"
-        field_uris: "Adresse de redirection"
-        field_grant_types: "Type de privilège accordé"
         no_client: "Aucun client pour le moment"
     remove:
         warn_message_1: "Vous avez la possibilité de supprimer le client %name%. Cette action est IRRÉVERSIBLE !"
         warn_message_2: "Si vous supprimez le client %name%, toutes les applications qui l’utilisaient ne fonctionneront plus avec votre compte wallabag."
         action: "Supprimer le client %name%"
-    client:
+    old_client:
         page_title: "Gestion des clients API > Nouveau client"
         page_description: "Vous allez créer un nouveau client. Merci de remplir l’adresse de redirection vers votre application."
         form:
             name_label: "Nom du client"
-            redirect_uris_label: "Adresses de redirection (optionnel)"
             save_label: "Créer un nouveau client"
         action_back: "Retour"
-    client_parameter:
-        page_title: "Gestion des clients API > Les paramètres de votre client"
-        page_description: "Voilà les paramètres de votre client"
-        field_name: "Nom du client"
-        field_id: "ID client"
-        field_secret: "Clé secrète"
-        back: "Retour"
-        read_howto: "Lire « comment créer ma première application »"
-    howto:
-        page_title: "Gestion des clients API > Comment créer votre première application"
-        description:
-            paragraph_1: "Les commandes suivantes utilisent la <a href=\"https://github.com/jkbrzt/httpie\">librarie HTTPie</a>. Assurez-vous qu’elle soit installée avant de l’utiliser."
-            paragraph_2: "Vous avez besoin d’un token pour échanger entre votre application et l’API de wallabag."
-            paragraph_3: "Pour créer un token, vous devez <a href=\"%link%\">créer un nouveau client</a>."
-            paragraph_4: "Maintenant créez votre token (remplacer client_id, client_secret, username et password avec les bonnes valeurs):"
-            paragraph_5: "L’API vous retournera une réponse comme ça :"
-            paragraph_6: "L’access_token doit être utilisé pour faire un appel à l’API. Par exemple :"
-            paragraph_7: "Cet appel va retourner tous les articles de l’utilisateur."
-            paragraph_8: "Si vous voulez toutes les méthodes de l’API, jetez un oeil <a href=\"%link%\">à la documentation de l’API</a>."
-        back: "Retour"
+        parameters:
+            page_title: "Gestion des clients API > Les paramètres de votre client"
+            page_description: "Voilà les paramètres de votre client"
+            field_name: "Nom du client"
+            field_id: "ID client"
+            field_secret: "Clé secrète"
+            back: "Retour"
+    app:
+        created_at: 'Créé le : %date%'
+    documentation:
+        title: "Documentation"
+        full_documentation: "Voir la documentation complète de l’API"
+        list_methods: "Lister toutes les méthodes de l’API"
 
 user:
     page_title: "Gestion des utilisateurs"
