--- a/src/Wallabag/CoreBundle/Resources/translations/messages.it.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.it.yml
@@ -443,18 +443,28 @@ import:
         # description: 'This importer will import all your Instapaper articles. On the backup (https://pinboard.in/settings/backup) page, click on "JSON" in the "Bookmarks" section. A JSON file will be downloaded (like "pinboard_export").'
         # how_to: 'Please select your Pinboard export and click on the below button to upload and import it.'
 
-developer:
+apps:
     # page_title: 'API clients management'
-    welcome_message: 'Benvenuto nelle API di wallabag'
-    documentation: 'Documentazione'
-    how_to_first_app: 'Come creare la mia prima applicazione'
-    full_documentation: 'Consulta la documentazione API completa'
-    list_methods: 'Elenco dei metodi API'
-    clients:
-        title: 'Client'
+    # allow:
+    #    title: 'A new application would like to connect to your account'
+    #    permissions:
+    #        read:
+    #            label: 'Read your data'
+    #            desc: '%name% will be able to access the list and contents of your entries, tags and annotations.'
+    #        write:
+    #            label: 'Edit your data'
+    #            desc: '%name% will be able to edit and manage (including deleting) your entries, tags and annotations.'
+    #        user:
+    #            label: 'Edit your user settings'
+    #            desc: '%name% will be able to manage your user account.'
+    #featured:
+    #    title: 'Featured apps'
+    #list:
+    #    title: 'Authorized apps'
+    old_clients:
         create_new: 'Crea un nuovo client'
-    existing_clients:
         title: 'Client esistenti'
+        list: 'Client'
         field_id: 'Client ID'
         field_secret: 'Client secret'
         field_uris: 'URI di reindirizzamento'
@@ -464,34 +474,26 @@ developer:
         warn_message_1: "Hai la possibilità di rimuovere questo client. L'operazione è IRREVERSIBILE!"
         warn_message_2: "Se lo rimuovi, ogni app configurata con questo client non sarà più in grado di autenticarsi."
         action: 'Rimuovi questo client'
-    client:
+    old_client:
         # page_title: 'API clients management > Nuovo client'
         page_description: 'Stai per creare un nuovo client. Compila i campi sottostanti per lo URI di reindirizzamento della tua applicazione.'
         form:
             # name_label: 'Name of the client'
-            redirect_uris_label: 'URI di reindirizzamento'
             save_label: 'Crea un nuovo client'
         action_back: 'Indietro'
-    client_parameter:
-        # page_title: 'API clients management > parametri Client'
-        page_description: 'Questi sono i tuoi parametri del client.'
-        # field_name: 'Client name'
-        field_id: 'Client ID'
-        field_secret: 'Client secret'
-        back: 'Indietro'
-        read_howto: 'Leggi "Come creare la mia prima applicazione"'
-    howto:
-        # page_title: 'API clients management > Come creare la mia prima applicazione'
-        description:
-            paragraph_1: 'I seguenti comandi fanno uso della <a href="https://github.com/jkbrzt/httpie">libreria HTTPie</a>. Verifica che sia installata sul tuo sistema prima di utilizzarli.'
-            paragraph_2: 'Hai bisogno di un token per far comunicare la tua applicazione di terze parti e le API di wallabag.'
-            paragraph_3: 'Per creare questo token, hai bisogno di <a href="%link%">creare un nuovo client</a>.'
-            paragraph_4: 'Ora, crea il tuo token (sostituisci client_id, client_secret, username e password con valori reali):'
-            paragraph_5: 'Le API ritorneranno una risposta di questo tipo:'
-            paragraph_6: "L'access_token è utile per chiamare un API endpoint. Per esempio:"
-            paragraph_7: 'Questa chiamata ritornerà tutti i contenuti per il tuo utente.'
-            paragraph_8: 'Se vuoi visualizzare tutti gli API endpoints, dai una occhiata alla <a href="%link%">documentazione delle API</a>.'
-        back: 'Indietro'
+        parameters:
+            # page_title: 'API clients management > parametri Client'
+            page_description: 'Questi sono i tuoi parametri del client.'
+            # field_name: 'Client name'
+            field_id: 'Client ID'
+            field_secret: 'Client secret'
+            back: 'Indietro'
+    # app:
+    #    created_at: 'Created at: %date%'
+    documentation:
+        title: 'Documentazione'
+        full_documentation: 'Consulta la documentazione API completa'
+        list_methods: 'Elenco dei metodi API'
 
 user:
     # page_title: Users management
