--- a/src/Wallabag/CoreBundle/Resources/translations/messages.oc.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.oc.yml
@@ -445,31 +445,38 @@ import:
 
 developer:
     page_title: 'Gestion dels clients API'
-    welcome_message: "Benvenguda sus l'API de wallabag"
-    documentation: 'Documentacion'
-    how_to_first_app: 'Cossí crear vòstra primièra aplicacion'
-    full_documentation: "Veire la documentacion completa de l'API"
-    list_methods: "Lista dels metòdes de l'API"
-    clients:
-        title: 'Clients'
+    # allow:
+    #    title: 'A new application would like to connect to your account'
+    #    permissions:
+    #        read:
+    #            label: 'Read your data'
+    #            desc: '%name% will be able to access the list and contents of your entries, tags and annotations.'
+    #        write:
+    #            label: 'Edit your data'
+    #            desc: '%name% will be able to edit and manage (including deleting) your entries, tags and annotations.'
+    #        user:
+    #            label: 'Edit your user settings'
+    #            desc: '%name% will be able to manage your user account.'
+    #featured:
+    #    title: 'Featured apps'
+    #list:
+    #    title: 'Authorized apps'
+    old_clients:
         create_new: 'Crear un novèl client'
-    existing_clients:
         title: 'Los clients existents'
+        list: 'Clients'
         field_id: 'ID Client'
         field_secret: 'Clé secreta'
-        field_uris: 'URLs de redireccion'
-        field_grant_types: 'Tipe de privilègi acordat'
         no_client: 'Pas cap de client pel moment.'
     remove:
         warn_message_1: 'Avètz la possibilitat de supriimr un client. Aquesta accion es IRREVERSIBLA !'
         warn_message_2: "Se suprimissètz un client, totas las aplicacions que l'emplegan foncionaràn pas mai amb vòstre compte wallabag."
         action: 'Suprimir aqueste client'
-    client:
+    old_client:
         page_title: 'Gestion dels clients API > Novèl client'
         page_description: "Anatz crear un novèl client. Mercés de garnir l'url de redireccion cap a vòstra aplicacion."
         form:
             name_label: "Nom del client"
-            redirect_uris_label: 'URLs de redireccion'
             save_label: 'Crear un novèl client'
         action_back: 'Retorn'
     client_parameter:
@@ -492,6 +499,19 @@ developer:
             paragraph_7: "Aquesta requèsta tornarà totes los articles de l'utilizaire."
             paragraph_8: "Se volètz totas las adreças d'accès de l'API, donatz un còp d’uèlh <a href=\"%link%\">a la documentacion de l'API</a>."
         back: 'Retorn'
+        parameters:
+            page_title: 'Gestion dels clients API > Los paramètres de vòstre client'
+            page_description: 'Vaquí los paramètres de vòstre client.'
+            field_name: 'Nom del client'
+            field_id: 'ID Client'
+            field_secret: 'Clau secreta'
+            back: 'Retour'
+    # app:
+    #    created_at: 'Created at: %date%'
+    documentation:
+        title: 'Documentacion'
+        full_documentation: "Veire la documentacion completa de l'API"
+        list_methods: "Lista dels metòdes de l'API"
 
 user:
     page_title: 'Gestion dels utilizaires'
