--- a/src/Wallabag/CoreBundle/Resources/translations/messages.pt.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.pt.yml
@@ -445,53 +445,53 @@ import:
 
 developer:
     # page_title: 'API clients management'
-    welcome_message: 'Bem-vindo a API do wallabag'
-    documentation: 'Documentação'
-    how_to_first_app: 'Como criar minha primeira aplicação'
-    full_documentation: 'Ver a documentação completa da API'
-    list_methods: 'Lista de métodos da API'
-    clients:
-        title: 'Clientes'
+    # allow:
+    #    title: 'A new application would like to connect to your account'
+    #    permissions:
+    #        read:
+    #            label: 'Read your data'
+    #            desc: '%name% will be able to access the list and contents of your entries, tags and annotations.'
+    #        write:
+    #            label: 'Edit your data'
+    #            desc: '%name% will be able to edit and manage (including deleting) your entries, tags and annotations.'
+    #        user:
+    #            label: 'Edit your user settings'
+    #            desc: '%name% will be able to manage your user account.'
+    #featured:
+    #    title: 'Featured apps'
+    #list:
+    #    title: 'Authorized apps'
+    old_clients:
         create_new: 'Criar um novo cliente'
-    existing_clients:
         title: 'Clientes existentes'
+        list: 'Clientes'
         field_id: 'ID do cliente'
         field_secret: 'Chave do cliente'
-        field_uris: 'URIs de redirecionamento'
-        field_grant_types: 'Tipo permitido'
         no_client: 'Nenhum cliente até agora.'
     remove:
         warn_message_1: 'Você tem permissão pare remover este cliente. Esta ação é IRREVERSÍVEL !'
         warn_message_2: 'Se você remover isso, todo o aplicativo configurado com este cliente não poderá se autenticar no seu wallabag.'
         action: 'Remover este cliente'
-    client:
+    old_client:
         # page_title: 'API clients management > Novo cliente'
         page_description: 'Você está prestes a criar um novo cliente. Por favor preencha o campo abaixo para a URI de redirecionamento de sua aplicação.'
         form:
             name_label: 'Nome do cliente'
-            redirect_uris_label: 'URIs de redirecionamento'
             save_label: 'Criar um novo cliente'
         action_back: 'Voltar'
-    client_parameter:
-        # page_title: 'API clients management > Parâmetros de clientes'
-        page_description: 'Aqui estão os parâmetros de seus clientes.'
-        field_name: 'Nome do cliente'
-        field_id: 'ID do cliente'
-        field_secret: 'Chave do cliente'
-        back: 'Voltar'
-        read_howto: 'Leia o how-to "Criar minha primeira aplicação"'
-    howto:
-        # page_title: 'API clients management > Criar minha primeira aplicação'
-        description:
-            paragraph_1: 'Os seguintes comandos fazem uso da <a href="https://github.com/jkbrzt/httpie">biblioteca HTTPie</a>. Tenha certeza que ela está instalada em seu servidor antes de usá-la.'
-            paragraph_2: 'Você precisa de um token para a comunicação entre sua aplicação terceira e a API do wallabag.'
-            paragraph_3: 'Para criar este token, você precisa <a href="%link%">criar um novo cliente</a>.'
-            paragraph_4: 'Agora, crie seu token (altere client_id, client_secret, username e password com os valores corretos):'
-            paragraph_5: 'A API pode retornar uma resposta como essa:'
-            paragraph_6: 'O access_token é utilizável para fazer uma chamada para o endpoint da API. Por exemplo:'
-            paragraph_7: 'Esta chamada pode retornar todas as entradas de seu usuário.'
-            paragraph_8: 'Se você deseja ver todos os endpoints da API, dê uma olhada <a href="%link%">em nossa documentação da API</a>.'
-        back: 'Voltar'
+        parameters:
+            # page_title: 'API clients management > Parâmetros de clientes'
+            page_description: 'Aqui estão os parâmetros de seus clientes.'
+            field_name: 'Nome do cliente'
+            field_id: 'ID do cliente'
+            field_secret: 'Chave do cliente'
+            back: 'Voltar'
+    # app:
+    #    created_at: 'Created at: %date%'
+    documentation:
+        title: 'Documentação'
+        full_documentation: 'Ver a documentação completa da API'
+        list_methods: 'Lista de métodos da API'
 
 user:
     page_title: 'Gerenciamento de Usuários'
