Displays an error with an annotation with a too long quote
Fix #2762

--- a/src/Wallabag/CoreBundle/Resources/translations/validators.fr.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/validators.fr.yml
@@ -4,3 +4,4 @@ validator:
     password_wrong_value: "Votre mot de passe actuel est faux"
     item_per_page_too_high: "Ça ne va pas plaire à l’application"
     rss_limit_too_high: "Ça ne va pas plaire à l’application"
+    quote_length_too_high: "La citation est trop longue. Elle doit avoir au maximum {{ limit }} caractères."
