--- a/src/Wallabag/CoreBundle/Resources/translations/validators.de.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/validators.de.yml
@@ -4,3 +4,4 @@ validator:
     password_wrong_value: 'Falscher Wert für dein aktuelles Kennwort'
     item_per_page_too_high: 'Dies wird die Anwendung möglicherweise beenden'
     rss_limit_too_high: 'Dies wird die Anwendung möglicherweise beenden'
+    # quote_length_too_high: 'The quote is too long. It should have {{ limit }} characters or less.'
