--- a/src/Wallabag/CoreBundle/Resources/translations/validators.es.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/validators.es.yml
@@ -4,3 +4,4 @@ validator:
     password_wrong_value: 'Entrada equivocada para su contraseña actual'
     item_per_page_too_high: 'Esto matará la aplicación'
     rss_limit_too_high: 'Esto matará la aplicación'
+    # quote_length_too_high: 'The quote is too long. It should have {{ limit }} characters or less.'
