--- a/src/Wallabag/CoreBundle/Resources/translations/validators.fa.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/validators.fa.yml
@@ -4,3 +4,4 @@ validator:
     password_wrong_value: 'رمز فعلی را اشتباه وارد کرده‌اید'
     item_per_page_too_high: 'با این تعداد برنامه به فنا می‌رود'
     rss_limit_too_high: 'با این تعداد برنامه به فنا می‌رود'
+    # quote_length_too_high: 'The quote is too long. It should have {{ limit }} characters or less.'
