--- a/src/Wallabag/CoreBundle/Resources/translations/validators.it.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/validators.it.yml
@@ -4,3 +4,4 @@ validator:
     password_wrong_value: 'Valore inserito per la password corrente errato'
     item_per_page_too_high: 'Questo valore è troppo alto'
     rss_limit_too_high: 'Questo valore è troppo alto'
+    # quote_length_too_high: 'The quote is too long. It should have {{ limit }} characters or less.'
