--- a/src/Wallabag/CoreBundle/Resources/translations/validators.pt.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/validators.pt.yml
@@ -4,3 +4,4 @@ validator:
     password_wrong_value: 'A senha atual informada está errada'
     item_per_page_too_high: 'Certamente isso pode matar a aplicação'
     rss_limit_too_high: 'Certamente isso pode matar a aplicação'
+    # quote_length_too_high: 'The quote is too long. It should have {{ limit }} characters or less.'
