--- a/src/Wallabag/CoreBundle/Resources/translations/validators.tr.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/validators.tr.yml
@@ -4,3 +4,4 @@ validator:
     # password_wrong_value: 'Wrong value for your current password'
     # item_per_page_too_high: 'This will certainly kill the app'
     # rss_limit_too_high: 'This will certainly kill the app'
+    # quote_length_too_high: 'The quote is too long. It should have {{ limit }} characters or less.'
