First draft for notifications
Signed-off-by: Thomas Citharel <tcit@tcit.fr>

--- a/src/Wallabag/CoreBundle/Resources/translations/messages.da.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.da.yml
@@ -37,6 +37,7 @@ menu:
         search: 'Søg'
         filter_entries: 'Filtrer artikler'
         # export: 'Export'
+        # notifications: 'Notifications'
     search_form:
         input_label: 'Indtast søgning'
 
@@ -240,6 +241,13 @@ entry:
         save_label: 'Gem'
     public:
         # shared_by_wallabag: "This article has been shared by <a href=%wallabag_instance%'>wallabag</a>"
+
+# notifications:
+#     sidebar:
+#         view_more: 'View more'
+#     list:
+#         page_title: 'Notifications'
+#         mark_all_as_read: 'Mark all as read'
 
 about:
     page_title: 'Om'
