--- a/src/Wallabag/CoreBundle/Resources/translations/messages.pt.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.pt.yml
@@ -37,6 +37,7 @@ menu:
         search: 'Pesquisa'
         filter_entries: 'Filtrar entradas'
         export: 'Exportar'
+        # notifications: 'Notifications'
     search_form:
         input_label: 'Digite aqui sua pesquisa'
 
@@ -241,6 +242,13 @@ entry:
         save_label: 'Salvar'
     public:
         shared_by_wallabag: "Este artigo foi compartilhado pelo <a href='%wallabag_instance%'>wallabag</a>"
+
+# notifications:
+#     sidebar:
+#         view_more: 'View more'
+#     list:
+#         page_title: 'Notifications'
+#         mark_all_as_read: 'Mark all as read'
 
 about:
     page_title: 'Sobre'
