--- a/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
@@ -37,6 +37,7 @@ menu:
         search: 'Search'
         filter_entries: 'Filter entries'
         export: 'Export'
+        notifications: 'Notifications'
     search_form:
         input_label: 'Enter your search here'
 
@@ -241,6 +242,13 @@ entry:
         save_label: 'Save'
     public:
         shared_by_wallabag: "This article has been shared by <a href='%wallabag_instance%'>wallabag</a>"
+
+notifications:
+    sidebar:
+        view_more: 'View more'
+    list:
+        page_title: 'Notifications'
+        mark_all_as_read: 'Mark all as read'
 
 about:
     page_title: 'About'
