--- a/src/Wallabag/CoreBundle/Resources/translations/messages.es.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.es.yml
@@ -37,6 +37,7 @@ menu:
         search: 'Buscar'
         filter_entries: 'Filtrar los artículos'
         export: 'Exportar'
+        # notifications: 'Notifications'
     search_form:
         input_label: 'Introduzca su búsqueda aquí'
 
@@ -241,6 +242,13 @@ entry:
         save_label: 'Guardar'
     public:
         shared_by_wallabag: "Este artículo se ha compartido con <a href='%wallabag_instance%'>wallabag</a>"
+
+# notifications:
+#     sidebar:
+#         view_more: 'View more'
+#     list:
+#         page_title: 'Notifications'
+#         mark_all_as_read: 'Mark all as read'
 
 about:
     page_title: 'Acerca de'
