--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
@@ -37,6 +37,7 @@ menu:
         search: 'جستجو'
         filter_entries: 'فیلترکردن مقاله‌ها'
         export: 'برون‌بری'
+        # notifications: 'Notifications'
     search_form:
         input_label: 'جستجوی خود را این‌جا بنویسید:'
 
@@ -241,6 +242,13 @@ entry:
         save_label: 'ذخیره'
     public:
         # shared_by_wallabag: "This article has been shared by <a href='%wallabag_instance%'>wallabag</a>"
+
+# notifications:
+#     sidebar:
+#         view_more: 'View more'
+#     list:
+#         page_title: 'Notifications'
+#         mark_all_as_read: 'Mark all as read'
 
 about:
     page_title: 'درباره'
