--- a/src/Wallabag/CoreBundle/Resources/translations/messages.oc.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.oc.yml
@@ -37,6 +37,7 @@ menu:
         search: 'Cercar'
         filter_entries: 'Filtrar los articles'
         export: 'Exportar'
+        # notifications: 'Notifications'
     search_form:
         input_label: 'Picatz vòstre mot-clau a cercar aquí'
 
@@ -241,6 +242,13 @@ entry:
         save_label: 'Enregistrar'
     public:
         shared_by_wallabag: "Aqueste article es estat partejat per <a href='%wallabag_instance%'>wallabag</a>"
+
+# notifications:
+#     sidebar:
+#         view_more: 'View more'
+#     list:
+#         page_title: 'Notifications'
+#         mark_all_as_read: 'Mark all as read'
 
 about:
     page_title: 'A prepaus'
