--- a/src/Wallabag/CoreBundle/Resources/translations/messages.tr.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.tr.yml
@@ -37,6 +37,7 @@ menu:
         search: 'Ara'
         filter_entries: 'Filtrele'
         export: 'Dışa Aktar'
+        # notifications: 'Notifications'
     search_form:
         input_label: 'Aramak istediğiniz herhangi bir şey yazın'
 
@@ -241,6 +242,13 @@ entry:
         save_label: 'Kaydet'
     public:
         # shared_by_wallabag: "This article has been shared by <a href='%wallabag_instance%'>wallabag</a>"
+
+# notifications:
+#     sidebar:
+#         view_more: 'View more'
+#     list:
+#         page_title: 'Notifications'
+#         mark_all_as_read: 'Mark all as read'
 
 about:
     page_title: 'Hakkımızda'
