--- a/src/Wallabag/CoreBundle/Resources/translations/messages.tr.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.tr.yml
@@ -260,6 +260,13 @@ entry:
 #         title: "wallabag has been updated to version %version%"
 #         details: "View update's details"
 
+# notifications:
+#     sidebar:
+#         view_more: 'View more'
+#     list:
+#         page_title: 'Notifications'
+#         mark_all_as_read: 'Mark all as read'
+
 about:
     page_title: 'Hakkımızda'
     top_menu:
